what's wrong with this code

--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
     <div style="padding: 10px;">
       <h2>Senior Bill Calculator</h2>
 
-      <label for="fname">Total Bill:</label>
+      <label for="bill">Total Bill:</label>
       <input type="text" id="bill" name="bill"><br><br>
 
       <label for="name"></label>Name:</label>
-      <input type="text" id="name" name="name"><br><br>
+      <input type="text" id="fullName" name="fullName"><br><br>
 
       <label for="pax"></label>Number of Guests:</label>
       <input type="number" id="pax" name="pax"><br><br>
@@ -27,7 +27,7 @@
       <label for="pax"></label>Number of Senior Citizens:</label>
       <input type="number" id="seniorPax" name="seniorPax"><br><br>
 
-      <button onclick="calculateBill()">Calculate</button>
+      <button onclick="calculate();">Calculate</button>
 
   <br><br>
     <table>
