--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <label for="pax"></label>Number of Senior Citizens:</label>
       <input type="number" id="seniorPax" name="seniorPax"><br><br>
 
-      <button onclick="calculate();">Calculate</button>
+      <button onclick="fetch();">Calculate</button>
 
   <br><br>
     <table>
